--- a/css/styles.css
+++ b/css/styles.css
@@ -975,7 +975,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 27rem;
-	background: url('../images/details-1-background.jpg') center center no-repeat;
+	background: url('../img/header-img.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -983,7 +983,7 @@ input[type='checkbox'] {
 	max-width: 90%;
 	margin-right: auto;
 	margin-left: auto;
-	padding-top: 6.375rem;
+	padding-top: 0;
 	padding-bottom: 1.5rem;
 }
 
@@ -1048,7 +1048,7 @@ input[type='checkbox'] {
 }
 
 .accordion .accordion-body {
-	margin-left: 3.125rem;
+	margin-left: 0;
 }
 
 
@@ -1165,7 +1165,7 @@ input[type='checkbox'] {
 
 .tabs .area-2 {
 	height: 27rem;
-	background: url('../images/details-2-background.jpg') center center no-repeat;
+	background: url('../img/header-img.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -2445,3 +2445,9 @@ a:hover.back-to-top {
 	/* end of navigation */
 }
 /* end of min-width width 1200px */
+
+
+.head-budaya {
+	text-align: center;
+	margin: 50px 0;
+}
