--- a/css/styles.css
+++ b/css/styles.css
@@ -1165,7 +1165,7 @@ input[type='checkbox'] {
 
 .tabs .area-2 {
 	height: 27rem;
-	background: url('../img/header-img.jpg') center center no-repeat;
+	background: url('../img/img1.jpg') center center no-repeat;
 	background-size: cover;
 }
 
